--- a/src/components/ComboName/ComboName.css
+++ b/src/components/ComboName/ComboName.css
@@ -1,28 +1,45 @@
 .nameContainer {
   position: relative;
   width: 90vw;
-  height: 10vh;
-  background-color: #4db6ac;
+  height: 5vh;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    270deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
   margin: 0 auto;
   margin-top: 50px;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   font-size: 24px;
+  display: flex;
+  z-index: -1;
 }
 
 .comboInput {
-    padding: 20px;
-    margin: 20px;
-    background-color: transparent;
-    border: 0px;
-    outline: 0px;
-    font-size: 24px;
-    font-family: 'Oswald';
-    font-style: italic;
-    text-transform: uppercase;
-    color: white;
+  align-items: center;
+  align-content: center;
+  align-self: center;
+  background-color: transparent;
+  border: 0px;
+  outline: 0px;
+  font-size: 18px;
+  font-family: "Oswald";
+  font-style: italic;
+  text-transform: uppercase;
+  color: white;
+  z-index: -1;
+}
+
+.comboInput::placeholder {
+  color: rgba(250,250,250 ,0.8);
 }
 
 .comboInput:focus {
-    outline: 0px;
-    border: 0px;
+  font-size: 24px;
+  outline: 0px;
+  border: 0px;
+  box-shadow: none;
 }
+
