--- a/src/App.css
+++ b/src/App.css
@@ -34,20 +34,23 @@ body, html {
   left: 0;
   right: 0;
   z-index: 1;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 0 auto;
+  padding: 5vw;
 }
 
 
 
+#canvas {
+    background-color: #333333;
+    margin: 0 auto;
+    margin-top: 30px;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
 .button-map {
   position: relative;
-  width: 90vw;
-  height: 30vh;
-  background-color: #333333;
+  width: 960px;
   margin: 0 auto;
   margin-top: 30px;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
   font-size: 24px;
 
 }
