--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,7 @@ body, html {
   right: 0;
   z-index: -1;
   width: 100vw;
-  background-image: url('./images/background.jpg');
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
+  background-image: url('./images/background2.png');
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
@@ -36,13 +34,16 @@ body, html {
   z-index: 1;
   margin: 0 auto;
   padding: 5vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 960px;
 }
 
 
 
 #canvas {
     background-color: #333333;
-    margin: 0 auto;
     margin-top: 30px;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
