--- a/src/components/ComboName/ComboName.css
+++ b/src/components/ComboName/ComboName.css
@@ -1,13 +1,8 @@
 .nameContainer {
   position: relative;
   height: 5vh;
-  background: rgb(2, 0, 36);
-  background: linear-gradient(
-    270deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 35%,
-    rgba(0, 212, 255, 1) 100%
-  );
+  background: rgb(51 51 51);
+
   margin-top: 50px;
   margin-bottom: 20px;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
